# ai_assisted_coding_interview

./: .gitignore  README.md
backend-kotlin/: HELP.md  build.gradle.kts  settings.gradle.kts
backend-kotlin/src/main/kotlin/brex/interview/: Application.kt
backend-kotlin/src/main/kotlin/brex/interview/config/: CorsConfig.kt
backend-kotlin/src/main/kotlin/brex/interview/converter/: ModelConverters.kt
backend-kotlin/src/main/kotlin/brex/interview/dto/: MessageDTO.kt
backend-kotlin/src/main/kotlin/brex/interview/graphql/: MessageGraphQLController.kt
backend-kotlin/src/main/kotlin/brex/interview/model/: Message.kt
backend-kotlin/src/main/kotlin/brex/interview/repository/: MessageRepository.kt
backend-kotlin/src/main/resources/: application.properties  data.sql
backend-kotlin/src/main/resources/graphql/: schema.graphqls
backend-kotlin/src/main/resources/schema/: 01-messages.sql
backend-kotlin/src/test/kotlin/brex/interview/: ApplicationTests.kt
backend-python/: README.md  p2p.db  pyproject.toml
backend-python/src/app/: main.py
backend-python/src/app/api/graphql/: schema.py
backend-python/src/app/api/rest/: messages.py
backend-python/src/app/database/: seed.py  session.py
backend-python/src/app/models/: base.py  message.py
backend-python/src/app/schemas/: message.py
frontend/: codegen.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/: HelloWorldDashboard.tsx
frontend/src/graphql/: queries.ts
frontend/src/lib/: apollo-client.ts
(+2 files in other folders)
